unix/lang/tests/error/import_error_line_number.yab
#expect#---Error 

# Error in library with correct line number
import library1e


